src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__invalid_initial_constant_values_in_pou_variables.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: err
---
error[E075]: Some initial values were not generated

error[E041]: Cannot generate literal initializer for 'prg.my_len': Value cannot be derived
   ┌─ <internal>:12:28
   │
10 │         PROGRAM prg
   │                 --- see also
11 │           VAR_INPUT
12 │             my_len: INT := LEN + 4;  //cannot be evaluated at compile time!
   │                            ^^^^^^^ Cannot generate literal initializer for 'prg.my_len': Value cannot be derived


